Fixed horizontal scroll issue

--- a/app/assets/stylesheets/main.css
+++ b/app/assets/stylesheets/main.css
@@ -17,7 +17,9 @@ p{
 }
 header h1{
 	margin-top: 8px;
-
+}
+.row{
+	margin-right: 0px;
 }
 .inline{
 	display: inline;
